# ida-xlnx

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  xilinx_bootgen.md
src/: bridge.cpp  loader.cpp  logger.hpp  parser.cpp  parser.hpp  xilinx_boot.hpp  zynqmp_boot.hpp
tests/: test_main.cpp
